# fr-geo-stat

./: .gitignore  README.md  departements.fr.geojson  insee.tokens.json  pyproject.toml
frgeostat/: cli.py  communes.py  config.toml  departements.py  utils.py
notebooks/: insee.ipynb
