
[tool.poetry]
name = "frgeostat"
version = "0.1.1"
description = ""
authors = ["volt-france <arno.veletanlic@volteuropa.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
geopandas = "^0.13.2"
fiona = "^1.9.4.post1"
folium = "^0.14.0"
plotly = "^5.15.0"
scipy = "^1.11.1"
shapely = "^2.0.1"
geovoronoi = "^0.4.0"
ipykernel = "^6.25.0"
beautifulsoup4 = "^4.12.2"
fastparquet = "^2023.7.0"
pyarrow = "^12.0.1"
pynsee = "^0.1.4"
ipywidgets = "^8.0.7"
jinja2 = "^3.1.2"
addict = "^2.4.0"
quickbar = "^0.1.1.post0"
unidecode = "^1.3.6"

[tool.poetry.scripts]
fr-geo-stats = "frgeostat.cli:app"
frgeo = "frgeostat.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
